[gd_scene load_steps=8 format=3 uid="uid://dogyw01fqky5"]

[ext_resource type="Script" path="res://menus/options/options_menu.gd" id="1_r4amw"]
[ext_resource type="Script" path="res://menus/options/video.gd" id="1_wsc8o"]
[ext_resource type="Script" path="res://menus/options/options_tab_control.gd" id="2_1opby"]
[ext_resource type="Script" path="res://menus/options/audio.gd" id="2_7bsqy"]
[ext_resource type="PackedScene" uid="uid://bfs6ye1af084d" path="res://menus/options/action_button.tscn" id="5_y3awx"]

[sub_resource type="InputEventKey" id="InputEventKey_ln2tl"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_rg0rn"]
events = [SubResource("InputEventKey_ln2tl")]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("1_r4amw")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Settings" type="TabContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
current_tab = 1
script = ExtResource("2_1opby")

[node name="Video" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
script = ExtResource("1_wsc8o")
metadata/_tab_index = 0

[node name="GridContainer" type="GridContainer" parent="UI/Settings/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="ResolutionLabel" type="Label" parent="UI/Settings/Video/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="UI/Settings/Video/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
flat = true

[node name="FullScreenLabel" type="Label" parent="UI/Settings/Video/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Fullscreen"

[node name="FullScreen" type="CheckBox" parent="UI/Settings/Video/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="BorderlessLabel" type="Label" parent="UI/Settings/Video/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Borderless"

[node name="Borderless" type="CheckBox" parent="UI/Settings/Video/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="VSyncLabel" type="Label" parent="UI/Settings/Video/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "VSync"

[node name="VSync" type="OptionButton" parent="UI/Settings/Video/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
item_count = 4
popup/item_0/text = "Disabled"
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="ResolutionConfirmationDialog" type="ConfirmationDialog" parent="UI/Settings"]
unique_name_in_owner = true
title = "Keep this size?"
initial_position = 2
dialog_text = "Keep this size?"
dialog_autowrap = true

[node name="Audio" type="TabBar" parent="UI/Settings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
script = ExtResource("2_7bsqy")
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.5
offset_right = 20.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Master"

[node name="Music" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Music"

[node name="SFX" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SFX"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Master" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 0.5

[node name="SFX" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="Controls" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="GridContainer" type="GridContainer" parent="UI/Settings/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -68.0
offset_right = 46.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Up" type="Label" parent="UI/Settings/Controls/GridContainer"]
layout_mode = 2
text = "Up"

[node name="ActionButton" parent="UI/Settings/Controls/GridContainer" instance=ExtResource("5_y3awx")]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Down" type="Label" parent="UI/Settings/Controls/GridContainer"]
layout_mode = 2
text = "Down"

[node name="ActionButton2" parent="UI/Settings/Controls/GridContainer" instance=ExtResource("5_y3awx")]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Left" type="Label" parent="UI/Settings/Controls/GridContainer"]
layout_mode = 2
text = "Left"

[node name="ActionButton3" parent="UI/Settings/Controls/GridContainer" instance=ExtResource("5_y3awx")]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Right2" type="Label" parent="UI/Settings/Controls/GridContainer"]
layout_mode = 2
text = "Right"

[node name="ActionButton4" parent="UI/Settings/Controls/GridContainer" instance=ExtResource("5_y3awx")]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="QuitMarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -51.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="QuitButton" type="Button" parent="UI/QuitMarginContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_rg0rn")
text = "Exit"

[connection signal="tab_button_pressed" from="UI/Settings" to="UI/Settings" method="_on_tab_button_pressed"]
[connection signal="tab_changed" from="UI/Settings" to="UI/Settings" method="_on_tab_changed"]
[connection signal="tab_clicked" from="UI/Settings" to="UI/Settings" method="_on_tab_clicked"]
[connection signal="tab_hovered" from="UI/Settings" to="UI/Settings" method="_on_tab_hovered"]
[connection signal="tab_selected" from="UI/Settings" to="UI/Settings" method="_on_tab_selected"]
[connection signal="item_selected" from="UI/Settings/Video/GridContainer/Resolution" to="UI/Settings/Video" method="_on_resolution_item_selected"]
[connection signal="toggled" from="UI/Settings/Video/GridContainer/FullScreen" to="UI/Settings/Video" method="_on_full_screen_toggled"]
[connection signal="toggled" from="UI/Settings/Video/GridContainer/Borderless" to="UI/Settings/Video" method="_on_borderless_toggled"]
[connection signal="item_selected" from="UI/Settings/Video/GridContainer/VSync" to="UI/Settings/Video" method="_on_v_sync_item_selected"]
[connection signal="canceled" from="UI/Settings/ResolutionConfirmationDialog" to="UI/Settings/Video" method="_on_resolution_confirmation_dialog_canceled"]
[connection signal="confirmed" from="UI/Settings/ResolutionConfirmationDialog" to="UI/Settings/Video" method="_on_resolution_confirmation_dialog_confirmed"]
[connection signal="tab_button_pressed" from="UI/Settings/Audio" to="UI/Settings/Audio" method="_on_tab_button_pressed"]
[connection signal="tab_changed" from="UI/Settings/Audio" to="UI/Settings/Audio" method="_on_tab_changed"]
[connection signal="tab_clicked" from="UI/Settings/Audio" to="UI/Settings/Audio" method="_on_tab_clicked"]
[connection signal="tab_hovered" from="UI/Settings/Audio" to="UI/Settings/Audio" method="_on_tab_hovered"]
[connection signal="tab_selected" from="UI/Settings/Audio" to="UI/Settings/Audio" method="_on_tab_selected"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/Master" to="UI/Settings/Audio" method="_on_master_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/Music" to="UI/Settings/Audio" method="_on_music_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/SFX" to="UI/Settings/Audio" method="_on_sfx_value_changed"]
[connection signal="pressed" from="UI/QuitMarginContainer/QuitButton" to="." method="_on_quit_button_pressed"]
